add  header user

--- a/index.html
+++ b/index.html
@@ -12,9 +12,28 @@
 <body>
     <div class="background">
         <div id="app">
-            <header></header>
-            <main></main>
-            <footer></footer>
+            <!-- left -->
+            <div class="users">
+                <header>
+                    <div class="userprofile">
+                        <img src="" alt="">
+                        <h4></h4>
+                    </div>
+                    <div class="navicon">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </header>
+                <main></main>
+                <footer></footer>
+            </div>
+            <!-- right -->
+            <div class="mess">
+                <header></header>
+                <main></main>
+                <footer></footer>
+            </div>
         </div>
     </div>
    
