--- a/index.html
+++ b/index.html
@@ -25,8 +25,24 @@
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                 </header>
-                <main></main>
-                <footer></footer>
+                <main>
+                    <div class="notific">
+                        <div class="circle">
+                            <i class="fa-solid fa-bell-slash"></i>
+                        </div>
+                        <h4>Ricevi notifiche di nuovi messaggi</h4>
+                        <a href="#">Attiva notifiche desktop</a>
+                    </div>
+                    <div class="container_search">
+                        <div class="input-group ">
+                            <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                            <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="basic-addon1">
+                          </div>
+                    </div>
+                    <div class="show_user">
+
+                    </div>
+                </main>
             </div>
             <!-- right -->
             <div class="mess">
