--- a/index.html
+++ b/index.html
@@ -46,9 +46,34 @@
             </div>
             <!-- right -->
             <div class="mess">
-                <header></header>
-                <main></main>
-                <footer></footer>
+                <header>
+                    <div class="user_texting">
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p></p>
+                    </div>
+                    <div class="nav_texing">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-paperclip"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </header>
+                <main>
+                    <div class="area_texting">
+
+                    </div>
+                </main>
+                <footer>
+                    <div class="icon_menu">
+                        <i class="fa-regular fa-face-smile"></i>
+                    </div>
+                    <div class="input_area">
+                        <input type="text">
+                    </div>
+                    <div class="icon-rec">
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
+                </footer>
             </div>
         </div>
     </div>
