--- a/index.html
+++ b/index.html
@@ -12,68 +12,75 @@
 <body>
     <div class="background">
         <div id="app">
-            <!-- left -->
-            <div class="users">
-                <header>
-                    <div class="userprofile">
-                        <img src="" alt="">
-                        <h4></h4>
+            <div class="container">
+                <div class="row">
+                    <!-- left -->
+                    <div class="users col-4">
+                        <header class="d-flex justify-content-between align-items-center p-3">
+                            <div class="userprofile d-flex align-items-center">
+                                <div class="circle">
+                                    <img src="./asset/img/avatar_io.jpg" alt="">
+                                </div>
+                                <h4 class="">Sofia</h4>
+                            </div>
+                            <div class="navicon p-2">
+                                <i class="fa-solid fa-circle-notch mx-2"></i>
+                                <i class="fa-solid fa-message mx-2"></i>
+                                <i class="fa-solid fa-ellipsis-vertical mx-2"></i>
+                            </div>
+                        </header>
+                        <main>
+                            <div class="notific">
+                                <div class="circle">
+                                    <i class="fa-solid fa-bell-slash"></i>
+                                </div>
+                                <h4>Ricevi notifiche di nuovi messaggi</h4>
+                                <a href="#">Attiva notifiche desktop</a>
+                            </div>
+                            <div class="container_search">
+                                <div class="input-group ">
+                                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                                    <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="basic-addon1">
+                                  </div>
+                            </div>
+                            <div class="show_user">
+        
+                            </div>
+                        </main>
                     </div>
-                    <div class="navicon">
-                        <i class="fa-solid fa-circle-notch"></i>
-                        <i class="fa-solid fa-message"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </header>
-                <main>
-                    <div class="notific">
-                        <div class="circle">
-                            <i class="fa-solid fa-bell-slash"></i>
-                        </div>
-                        <h4>Ricevi notifiche di nuovi messaggi</h4>
-                        <a href="#">Attiva notifiche desktop</a>
-                    </div>
-                    <div class="container_search">
-                        <div class="input-group ">
-                            <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-                            <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="basic-addon1">
-                          </div>
-                    </div>
-                    <div class="show_user">
 
+                    <!-- right -->
+                    <div class="mess col-8">
+                        <header>
+                            <div class="user_texting">
+                                <img src="" alt="">
+                                <h4></h4>
+                                <p></p>
+                            </div>
+                            <div class="nav_texing">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                                <i class="fa-solid fa-paperclip"></i>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
+                        </header>
+                        <main>
+                            <div class="area_texting">
+        
+                            </div>
+                        </main>
+                        <footer>
+                            <div class="icon_menu">
+                                <i class="fa-regular fa-face-smile"></i>
+                            </div>
+                            <div class="input_area">
+                                <input type="text">
+                            </div>
+                            <div class="icon-rec">
+                                <i class="fa-solid fa-microphone"></i>
+                            </div>
+                        </footer>
                     </div>
-                </main>
-            </div>
-            <!-- right -->
-            <div class="mess">
-                <header>
-                    <div class="user_texting">
-                        <img src="" alt="">
-                        <h4></h4>
-                        <p></p>
-                    </div>
-                    <div class="nav_texing">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <i class="fa-solid fa-paperclip"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                    </div>
-                </header>
-                <main>
-                    <div class="area_texting">
-
-                    </div>
-                </main>
-                <footer>
-                    <div class="icon_menu">
-                        <i class="fa-regular fa-face-smile"></i>
-                    </div>
-                    <div class="input_area">
-                        <input type="text">
-                    </div>
-                    <div class="icon-rec">
-                        <i class="fa-solid fa-microphone"></i>
-                    </div>
-                </footer>
+                </div>
             </div>
         </div>
     </div>
