--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
                             </div>
                         </header>
                         <main>
-                            <div class="notific">
-                                <div class="circle">
-                                    <i class="fa-solid fa-bell-slash"></i>
+                            <div class="notific d-flex p-3">
+                                <div class="circle d-flex justify-content-center align-items-center mx-2">
+                                    <i class="fa-solid fa-bell-slash fa-2x"></i>
                                 </div>
-                                <h4>Ricevi notifiche di nuovi messaggi</h4>
-                                <a href="#">Attiva notifiche desktop</a>
+                                <div class="mx-2">
+                                    <h6>Ricevi notifiche di nuovi messaggi</h6>
+                                    <a href="#">Attiva notifiche desktop</a>
+                                </div>
                             </div>
                             <div class="container_search">
                                 <div class="input-group ">
