--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                                     <a href="#">Attiva notifiche desktop</a>
                                 </div>
                             </div>
-                            <div class="container_search">
+                            <div class="container_search bg-white p-2">
                                 <div class="input-group ">
-                                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                    <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="basic-addon1">
+                                    <span class="input-group-text bg-white border-end-0" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                                    <input type="text" class="form-control border-start-0" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="basic-addon1">
                                   </div>
                             </div>
                             <div class="show_user">
