--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="background">
         <div id="app">
-            <div class="container py-5">
+            <div class="container pt-3">
                 <div class="row">
                     <!-- left -->
                     <div class="users col-4 p-0">
@@ -46,7 +46,7 @@
                                   </div>
                             </div>
                             <div class="show_users overflow-auto">
-                                <div class="show_user d-flex align-items-center bg-white p-2" v-for="(user,index) in contacts">
+                                <div class="show_user d-flex align-items-center bg-white p-2" v-for="(user,index) in contacts" @click="chage_activeChat(index)">
                                     <div class="avatar px-3">
                                         <div class="circle">
                                             <img :src="user.avatar" :alt="user.name">
@@ -82,15 +82,20 @@
                             </div>
                         </header>
                         <main class="position-relative">
-                            <div class="area_texting">
-        
+                            <div class="area_texting px-5 overflow-auto position-relative">
+                                <div class="message py-3 " v-for="mess in contacts[activechat].messages">
+                                    <div class="text d-inline-block rounded-2 " :class="mess.status">
+                                        <p class="px-2">{{mess.message}}</p>
+                                        <p class="date px-2">{{mess.date}}</p>
+                                    </div>
+                                </div>
                             </div>
                             <footer class="w-100 position-absolute d-flex p-2">
                                 <div class="icon_menu px-3">
                                     <i class="fa-regular fa-face-smile"></i>
                                 </div>
                                 <div class="input_area w-100">
-                                    <input type="text" class="w-100">
+                                    <input type="text" class="w-100 p-2 rounded-2 border-light" placeholder="Scrvi un messaggio">
                                 </div>
                                 <div class="icon-rec px-3">
                                     <i class="fa-solid fa-microphone"></i>
