--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <div class="container_search bg-white p-2">
                                 <div class="input-group ">
                                     <span class="input-group-text bg-white border-end-0" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                    <input type="text" class="form-control border-start-0" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="basic-addon1">
+                                    <input type="text" class="form-control border-start-0" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="basic-addon1" >
                                   </div>
                             </div>
                             <div class="show_users overflow-auto">
@@ -95,7 +95,7 @@
                                     <i class="fa-regular fa-face-smile"></i>
                                 </div>
                                 <div class="input_area w-100">
-                                    <input type="text" class="w-100 p-2 rounded-2 border-light" placeholder="Scrvi un messaggio">
+                                    <input type="text" class="w-100 p-2 rounded-2 border-light" placeholder="Scrvi un messaggio" v-model="messageNew"  @keyup.enter="genereted_new_mess" >
                                 </div>
                                 <div class="icon-rec px-3">
                                     <i class="fa-solid fa-microphone"></i>
