--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                     <i class="fa-regular fa-face-smile"></i>
                                 </div>
                                 <div class="input_area w-100">
-                                    <input type="text" class="w-100 p-2 rounded-2 border-light" placeholder="Scrvi un messaggio" v-model="messageNew"  @keyup.enter="genereted_new_mess" >
+                                    <input type="text" class="w-100 p-2 rounded-2 border-light" placeholder="Scrvi un messaggio" v-model="messageNew"  @keyup.enter="new_mess_full" >
                                 </div>
                                 <div class="icon-rec px-3">
                                     <i class="fa-solid fa-microphone"></i>
