--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                         <div class="info d-flex flex-column">
                                             <p class="m-0 p-0 fw-bold">{{user.name}}</p>
                                             <p class="m-0 p-0 co">ultimo messaggio inviato</p>
-                                            <p class="m-0 p-0">{{user.messages[0].date}}</p>
+                                            <p class="m-0 p-0">{{lastenter(user)}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -74,7 +74,8 @@
                                 </div>
                                 <div class="info_acces">
                                     <p class="m-0 fw-bold">{{contacts[activechat].name}}</p>
-                                    <p class="m-0">ultimo accesso :{{contacts[activechat].messages[0].date}} </p>
+                                    
+                                    <p class="m-0">ultimo accesso : {{last_acces()}}</p>
                                 </div>
                             </div>
                             <div class="nav_texing d-flex align-items-center">
@@ -85,10 +86,24 @@
                         </header>
                         <main class="position-relative">
                             <div class="area_texting px-5 overflow-auto position-relative">
-                                <div class="message py-3 " v-for="mess in contacts[activechat].messages">
-                                    <div class="text d-inline-block rounded-2 " :class="mess.status">
-                                        <p class="px-2">{{mess.message}}</p>
-                                        <p class="date px-2">{{mess.date}}</p>
+                                <div class="message py-3 " v-for="(mess,index) in contacts[activechat].messages">
+                                    <div class="text d-inline-block rounded-2 " :class="mess.status" @click="showmenu ">
+                                        <div class="position-relative">
+                                            <div class="menu_a_tendina position-absolute">
+                                                <div class="dropdown">
+                                                    <button class="border-0 " v-show="showMenus" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        <i class="fa-solid fa-chevron-down"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu">
+                                                      <li><a class="dropdown-item" href="#">Message info</a></li>
+                                                      <li><a class="dropdown-item" href="#" @click="removemess(index)">Delete message</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <p class="px-2">{{mess.message}}</p>
+                                            <p class="date px-2">{{mess.date}}</p>
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -118,8 +133,8 @@
 
 
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./asset/js/main.js"></script>
 </body>
 </html>
