--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                         <div class="info d-flex flex-column">
                                             <p class="m-0 p-0 fw-bold">{{user.name}}</p>
                                             <p class="m-0 p-0 co">ultimo messaggio inviato</p>
-                                            <p class="m-0 p-0">{{lastenter(user)}}</p>
+                                            <p class="m-0 p-0">{{datelastaccess[index]}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -75,7 +75,7 @@
                                 <div class="info_acces">
                                     <p class="m-0 fw-bold">{{contacts[activechat].name}}</p>
                                     
-                                    <p class="m-0">ultimo accesso : {{last_acces()}}</p>
+                                    <p class="m-0">ultimo accesso : {{datelastaccess[this.activechat]}}</p>
                                 </div>
                             </div>
                             <div class="nav_texing d-flex align-items-center">
@@ -112,7 +112,7 @@
                                     <i class="fa-regular fa-face-smile"></i>
                                 </div>
                                 <div class="input_area w-100">
-                                    <input type="text" class="w-100 p-2 rounded-2 border-light" placeholder="Scrvi un messaggio" v-model="messageNew"  @keyup.enter="new_mess_full" >
+                                    <input type="text" class="w-100 p-2 rounded-2 border-light" placeholder="Scrvi un messaggio" v-model="messageNew"  @keyup.enter="new_mess_full(index)" >
                                 </div>
                                 <div class="icon-rec px-3">
                                     <i class="fa-solid fa-microphone"></i>
