--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                             </div>
                         </header>
                         <main class="position-relative">
-                            <div class="area_texting px-5 overflow-auto position-relative">
-                                <div class="message py-3 " v-for="(mess,index) in contacts[activechat].messages">
-                                    <div class="text d-inline-block rounded-2 " :class="mess.status" @click="showmenu ">
-                                        <div class="position-relative">
-                                            <div class="menu_a_tendina position-absolute">
+                            <div class="area_texting px-5 overflow-auto  " >
+                                <div class="message py-3 d-flex " v-for="(mess,index) in contacts[activechat].messages" :class="mess.status == 'sent' ? 'justify-content-end' : 'align-items-start'">
+                                    <div class="text d-flex rounded-2 "  :class="mess.status" @click="showmenu ">
+                                        <div class="" >
+                                            <div class="menu_a_tendina ">
                                                 <div class="dropdown">
                                                     <button class="border-0 " v-show="showMenus" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                         <i class="fa-solid fa-chevron-down"></i>
