add responsive last messagge view

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         </div>
                                         <div class="info d-flex flex-column">
                                             <p class="m-0 p-0 fw-bold">{{user.name}}</p>
-                                            <p class="m-0 p-0 co">ultimo messaggio inviato</p>
+                                            <p class="m-0 p-0 co">{{lastmess(user)}}</p>
                                             <p class="m-0 p-0">{{datelastaccess[index]}}</p>
                                         </div>
                                     </div>
