--- a/index.html
+++ b/index.html
@@ -82,7 +82,18 @@
                             <div class="nav_texing d-flex align-items-center">
                                 <i class="fa-solid fa-magnifying-glass "></i>
                                 <i class="fa-solid fa-paperclip "></i>
-                                <i class="fa-solid fa-ellipsis-vertical "></i>
+                                
+                                <div class="menu_a_tendina">
+                                    <div class="dropdown">
+                                        <button class="border-0 "  type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical "></i>
+                                        </button>
+                                        <ul class="dropdown-menu">
+                                          <li><a class="dropdown-item" href="#" @click="deleteAllMessages" >Elimina messaggi</a></li>
+                                          <li><a class="dropdown-item" href="#" @click="deleteChat">Elimina chat</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </header>
                         <main class="position-relative">
