--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                         <header class="d-flex justify-content-between align-items-center p-3">
                             <div class="userprofile d-flex align-items-center">
                                 <div class="circle">
-                                    <img src="./img/avatar_io.jpg" alt="">
+                                    <img src="./img/avatar_io.png" alt="">
                                 </div>
                                 <h4 class="">Sofia</h4>
                             </div>
                             <div class="navicon p-2">
                                 <i class="fa-solid fa-circle-notch mx-2"></i>
                                 <i class="fa-solid fa-message mx-2"></i>
-                                <i class="fa-solid fa-ellipsis-vertical mx-2"></i>
-                                <div class="add_account bg-primary position-fixed d-flex flex-column">
+                                <i class="fa-solid fa-ellipsis-vertical mx-2" @click="showpannelnewaccount()"></i>
+                                <div class="add_account bg-primary position-fixed  flex-column" v-show="newaccountpannelshow">
                                     <span>Nome:</span><input v-model="newNameContact" type="text" placeholder="scrivi il nome">
                                     <select v-model="optionvalue" placeholder="scegli ">
                                             icon 1
@@ -57,7 +57,7 @@
                                             icon 9
                                         </option>
                                     </select>
-                                    <img :src="optionvalue" alt="">
+                                    <img  :src="optionvalue" alt="">
                                     <button @click="addNew_Contact">aggiungi Account</button>
                                 </div>
                             </div>
@@ -80,7 +80,7 @@
                                   </div>
                             </div>
                             <div class="show_users overflow-auto bg-white" >
-                                <div class="show_user bg-white " v-for="(user,index) in contacts" @click="chage_activeChat(index)">
+                                <div class="show_user bg-white " v-for="(user,index) in contacts" @click="chage_active_chat(index)">
                                     <div class="d-flex align-items-center bg-white p-2" v-if="user.visible">
                                         <div class="avatar px-3">
                                             <div class="circle">
@@ -90,7 +90,7 @@
                                         <div class="info d-flex flex-column">
                                             <p class="m-0 p-0 fw-bold">{{user.name}}</p>
                                             <p class="m-0 p-0 co">{{lastmess(user)}}</p>
-                                            <p class="m-0 p-0">{{datelastaccess[index]}}</p>
+                                            <p class="m-0 p-0">{{date_last_access[index]}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -104,13 +104,13 @@
                         <header class="p-3 d-flex justify-content-between">
                             <div class="user_texting d-flex align-items-center ">
                                 <div class="circle ">
-                                    <img :src="contacts[activechat].avatar" alt="">
+                                    <img :src="contacts[active_chat].avatar" alt="">
                                 </div>
                                 <div class="info_acces">
-                                    <p class="m-0 fw-bold">{{contacts[activechat].name}}</p>
+                                    <p class="m-0 fw-bold">{{contacts[active_chat].name}}</p>
                                     <p class="m-o" v-show="accounstWriting">...Sta Scrivendo </p>
-                                    <p class="m-o" v-show="online">Oniline </p>
-                                    <p class="m-0" v-show="lastAccesView">ultimo accesso : {{datelastaccess[this.activechat]}}</p>
+                                    <p class="m-o" v-show="online">Online </p>
+                                    <p class="m-0" v-show="lastAccesView">ultimo accesso : {{date_last_access[this.active_chat]}}</p>
                                 </div>
                             </div>
                             <div class="nav_texing d-flex align-items-center">
@@ -132,8 +132,10 @@
                         </header>
                         <main class="position-relative">
                             <div class="area_texting px-5 overflow-auto  " >
-                                <div class="message py-3 d-flex " v-for="(mess,index) in contacts[activechat].messages" :class="mess.status == 'sent' ? 'justify-content-end' : 'align-items-start'">
-                                    <div class="text d-flex rounded-2 "  :class="mess.status" @click="showmenu ">
+                                <!-- ------------------------------------------------- -->
+                                <a :href="'#'+'messaggio' + lunghezzamessaggio">ultimo messaggio letto</a>
+                                <div class="message py-3 d-flex " v-for="(mess,index) in contacts[active_chat].messages" :class="mess.status == 'sent' ? 'justify-content-end' : 'align-items-start'">
+                                    <div class="text d-flex rounded-2 " :id="'messaggio' + index " :class="mess.status" @click="showmenu ">
                                         <div class="position-relative" >
                                             <div class="menu_a_tendina position-absolute">
                                                 <div class="dropdown">
@@ -142,7 +144,7 @@
                                                     </button>
                                                     <ul class="dropdown-menu">
                                                       <li><a class="dropdown-item" href="#">Message info</a></li>
-                                                      <li><a class="dropdown-item" href="#" @click="removemess(index)">Delete message</a></li>
+                                                      <li><a class="dropdown-item" href="#" @click="message_deletion(index)">Delete message</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -154,6 +156,9 @@
                                 </div>
                             </div>
                             <footer class="w-100 position-absolute d-flex p-2">
+                                <textarea v-model="input"></textarea>
+
+
                                 <div class="icon_menu px-3">
                                     <i class="fa-regular fa-face-smile"></i>
                                 </div>
@@ -180,7 +185,7 @@
     
     
 
-
+    <script src="https://unpkg.com/vue-emoji-picker/dist/vue-emoji-picker.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
